@startuml

skinparam linetype ortho
top to bottom direction
skinparam defaultFontSize 12
skinparam ArrowFontSize 11
skinparam nodesep 70
skinparam ranksep 90

title Mentory ER (Админ-панель / Trust MVP, Must Have)

entity "users" as users {
  * id : Integer <<PK>>
  --
  email : text <<UQ>>
  role : text
  status : text
}

entity "sessions (ref)" as sessions_ref {
  * id : Integer <<PK>>
  --
  status : text
}

entity "mentor_regalia" as mentor_regalia {
  * id : Integer <<PK>>
  --
  mentor_id : Integer <<FK>>
  file_url : text
  status : text
  reviewed_by : Integer <<FK, nullable>>
  reviewed_at : timestamp <<nullable>>
  created_at : timestamp
}

entity "complaints" as complaints {
  * id : Integer <<PK>>
  --
  author_id : Integer <<FK>>
  target_user_id : Integer <<FK>>
  target_session_id : Integer <<FK, nullable>>
  assigned_admin_id : Integer <<FK, nullable>>
  category : text
  status : text
  resolution_comment : text <<nullable>>
  created_at : timestamp
  closed_at : timestamp <<nullable>>
}

entity "complaint_messages" as complaint_messages {
  * id : Integer <<PK>>
  --
  complaint_id : Integer <<FK>>
  sender_id : Integer <<FK>>
  body : text
  created_at : timestamp
}

entity "moderation_actions" as moderation_actions {
  * id : Integer <<PK>>
  --
  admin_id : Integer <<FK>>
  target_type : text
  target_id : Integer
  action : text
  reason : text <<nullable>>
  created_at : timestamp
}

entity "admin_audit_logs" as admin_audit_logs {
  * id : Integer <<PK>>
  --
  admin_id : Integer <<FK>>
  action : text
  target_type : text
  target_id : Integer
  created_at : timestamp
}

' layout
users -[hidden]down- complaints
sessions_ref -[hidden]down- complaints
complaints -[hidden]down- complaint_messages
complaint_messages -[hidden]down- moderation_actions
moderation_actions -[hidden]down- admin_audit_logs
mentor_regalia -[hidden]left- complaints

' relationships
users ||--o{ complaints : "автор"
sessions_ref ||--o{ complaints : "сессия"

complaints ||--o{ complaint_messages : "сообщения"
users ||--o{ complaint_messages : "отправитель"

users ||--o{ mentor_regalia : "регалии"
users ||--o{ moderation_actions : "действия"
users ||--o{ admin_audit_logs : "аудит"

legend right
  PK - основной идентификатор
  FK - ссылка на связанную запись
endlegend

@enduml
